# rust-azure-table-queue

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/queuemsg/: lib.rs
